[gd_scene load_steps=11 format=3 uid="uid://27aol2dntiqh"]

[ext_resource type="Script" path="res://Scripts/Levels/drum_session.gd" id="1_13ffa"]
[ext_resource type="PackedScene" uid="uid://cltmd060wny4o" path="res://Scenes/Levels/tile_map.tscn" id="1_rujw8"]
[ext_resource type="PackedScene" uid="uid://dwtp1ogpi4d2d" path="res://Scenes/DrumSession/road.tscn" id="2_m3yyx"]
[ext_resource type="PackedScene" uid="uid://0g4cxqhyjfww" path="res://Scenes/player.tscn" id="3_yfe43"]
[ext_resource type="PackedScene" uid="uid://c4bl3bke3sked" path="res://Scenes/DrumSession/drum_teacher.tscn" id="4_yoc1y"]
[ext_resource type="PackedScene" uid="uid://dwn72018ouwf3" path="res://Scenes/UI/drum_ui.tscn" id="5_hte52"]
[ext_resource type="PackedScene" uid="uid://bhxkpn2he55t1" path="res://Scenes/save_system.tscn" id="6_vdq7k"]
[ext_resource type="PackedScene" uid="uid://bsmhycxtja4hj" path="res://Scenes/UI/session_end.tscn" id="7_u3yds"]
[ext_resource type="PackedScene" uid="uid://cfxc8wlc0l4aj" path="res://Scenes/UI/option_menu.tscn" id="8_a7ns0"]
[ext_resource type="Texture2D" uid="uid://fkj1q6gn3kaj" path="res://Sprites/Drum Session/Drum Road/DrumKeyTutorial.png" id="9_ujuxm"]

[node name="DrumSession6" type="Node"]
script = ExtResource("1_13ffa")

[node name="TileMap" parent="." instance=ExtResource("1_rujw8")]
layer_0/tile_data = PackedInt32Array(327688, 983043, 11, 393224, 983043, 11, 458760, 983043, 11, 524296, 983043, 11, 589832, 983043, 11, 655368, 983043, 11, 327689, 983043, 11, 393225, 983043, 11, 458761, 983043, 11, 524297, 983043, 11, 589833, 983043, 11, 655369, 983043, 11, 327690, 983043, 11, 393226, 983043, 11, 458762, 983043, 11, 524298, 983043, 11, 589834, 983043, 11, 655370, 983043, 11, 327691, 983043, 11, 393227, 983043, 11, 458763, 983043, 11, 524299, 983043, 11, 589835, 983043, 11, 655371, 983043, 11, 327692, 983043, 11, 393228, 983043, 11, 458764, 983043, 11, 524300, 983043, 11, 589836, 983043, 11, 655372, 983043, 11, 327693, 983043, 11, 393229, 983043, 11, 458765, 983043, 11, 524301, 983043, 11, 589837, 983043, 11, 655373, 983043, 11, 327694, 983043, 11, 393230, 983043, 11, 458766, 983043, 11, 524302, 983043, 11, 589838, 983043, 11, 655374, 983043, 11, 327695, 983043, 11, 393231, 983043, 11, 458767, 983043, 11, 524303, 983043, 11, 589839, 983043, 11, 655375, 983043, 11, 0, 983043, 11, 65536, 983043, 11, 131072, 983043, 11, 196608, 983043, 11, 262144, 983043, 11, 327680, 983043, 11, 393216, 983043, 11, 458752, 983043, 11, 524288, 983043, 11, 589824, 983043, 11, 655360, 983043, 11, 720896, 983043, 11, 786432, 983043, 11, 851968, 983043, 11, 1, 983043, 11, 65537, 983043, 11, 131073, 983043, 11, 196609, 983043, 11, 262145, 983043, 11, 327681, 983043, 11, 393217, 983043, 11, 458753, 983043, 11, 524289, 983043, 11, 589825, 983043, 11, 655361, 983043, 11, 720897, 983043, 11, 786433, 983043, 11, 851969, 983043, 11, 2, 983043, 11, 65538, 983043, 11, 131074, 983043, 11, 196610, 983043, 11, 262146, 983043, 11, 327682, 983043, 11, 393218, 983043, 11, 458754, 983043, 11, 524290, 983043, 11, 589826, 983043, 11, 655362, 983043, 11, 720898, 983043, 11, 786434, 983043, 11, 851970, 983043, 11, 3, 983043, 11, 65539, 983043, 11, 131075, 983043, 11, 196611, 983043, 11, 262147, 983043, 11, 327683, 983043, 11, 393219, 983043, 11, 458755, 983043, 11, 524291, 983043, 11, 589827, 983043, 11, 655363, 983043, 11, 720899, 983043, 11, 786435, 983043, 11, 851971, 983043, 11, 4, 983043, 11, 65540, 983043, 11, 131076, 983043, 11, 196612, 983043, 11, 262148, 983043, 11, 327684, 983043, 11, 393220, 983043, 11, 458756, 983043, 11, 524292, 983043, 11, 589828, 983043, 11, 655364, 983043, 11, 720900, 983043, 11, 786436, 983043, 11, 851972, 983043, 11, 5, 983043, 11, 65541, 983043, 11, 131077, 983043, 11, 196613, 983043, 11, 262149, 983043, 11, 327685, 983043, 11, 393221, 983043, 11, 458757, 983043, 11, 524293, 983043, 11, 589829, 983043, 11, 655365, 983043, 11, 720901, 983043, 11, 786437, 983043, 11, 851973, 983043, 11, 6, 983043, 11, 65542, 983043, 11, 131078, 983043, 11, 196614, 983043, 11, 262150, 983043, 11, 327686, 983043, 11, 393222, 983043, 11, 458758, 983043, 11, 524294, 983043, 11, 589830, 983043, 11, 655366, 983043, 11, 720902, 983043, 11, 786438, 983043, 11, 851974, 983043, 11, 7, 983043, 11, 65543, 983043, 11, 131079, 983043, 11, 196615, 983043, 11, 262151, 983043, 11, 327687, 983043, 11, 393223, 983043, 11, 458759, 983043, 11, 524295, 983043, 11, 589831, 983043, 11, 655367, 983043, 11, 720903, 983043, 11, 786439, 983043, 11, 851975, 983043, 11, 8, 983043, 11, 65544, 983043, 11, 131080, 983043, 11, 196616, 983043, 11, 262152, 983043, 11, 720904, 983043, 11, 786440, 983043, 11, 851976, 983043, 11, 9, 983043, 11, 65545, 983043, 11, 131081, 983043, 11, 196617, 983043, 11, 262153, 983043, 11, 720905, 983043, 11, 786441, 983043, 11, 851977, 983043, 11, 10, 983043, 11, 65546, 983043, 11, 131082, 983043, 11, 196618, 983043, 11, 262154, 983043, 11, 720906, 983043, 11, 786442, 983043, 11, 851978, 983043, 11, 11, 983043, 11, 65547, 983043, 11, 131083, 983043, 11, 196619, 983043, 11, 262155, 983043, 11, 720907, 983043, 11, 786443, 983043, 11, 851979, 983043, 11, 12, 983043, 11, 65548, 983043, 11, 131084, 983043, 11, 196620, 983043, 11, 262156, 983043, 11, 720908, 983043, 11, 786444, 983043, 11, 851980, 983043, 11, 13, 983043, 11, 65549, 983043, 11, 131085, 983043, 11, 196621, 983043, 11, 262157, 983043, 11, 720909, 983043, 11, 786445, 983043, 11, 851981, 983043, 11, 14, 983043, 11, 65550, 983043, 11, 131086, 983043, 11, 196622, 983043, 11, 262158, 983043, 11, 720910, 983043, 11, 851982, 983043, 11, 15, 983043, 11, 65551, 983043, 11, 131087, 983043, 11, 196623, 983043, 11, 262159, 983043, 11, 720911, 983043, 11, 851983, 983043, 11, 16, 983043, 11, 65552, 983043, 11, 131088, 983043, 11, 196624, 983043, 11, 262160, 983043, 11, 327696, 983043, 11, 393232, 983043, 11, 458768, 983043, 11, 524304, 983043, 11, 589840, 983043, 11, 655376, 983043, 11, 720912, 983043, 11, 851984, 983043, 11, 17, 983043, 11, 65553, 983043, 11, 131089, 983043, 11, 196625, 983043, 11, 262161, 983043, 11, 327697, 983043, 11, 393233, 983043, 11, 458769, 983043, 11, 524305, 983043, 11, 589841, 983043, 11, 655377, 983043, 11, 720913, 983043, 11, 851985, 983043, 11, 18, 983043, 11, 65554, 983043, 11, 131090, 983043, 11, 196626, 983043, 11, 262162, 983043, 11, 327698, 983043, 11, 393234, 983043, 11, 458770, 983043, 11, 524306, 983043, 11, 589842, 983043, 11, 655378, 983043, 11, 851986, 983043, 11, 19, 983043, 11, 65555, 983043, 11, 131091, 983043, 11, 196627, 983043, 11, 262163, 983043, 11, 327699, 983043, 11, 393235, 983043, 11, 458771, 983043, 11, 524307, 983043, 11, 589843, 983043, 11, 655379, 983043, 11, 851987, 983043, 11, 20, 983043, 11, 65556, 983043, 11, 131092, 983043, 11, 196628, 983043, 11, 262164, 983043, 11, 327700, 983043, 11, 393236, 983043, 11, 458772, 983043, 11, 524308, 983043, 11, 589844, 983043, 11, 655380, 983043, 11, 851988, 983043, 11, 21, 983043, 11, 65557, 983043, 11, 131093, 983043, 11, 196629, 983043, 11, 262165, 983043, 11, 327701, 983043, 11, 393237, 983043, 11, 458773, 983043, 11, 524309, 983043, 11, 589845, 983043, 11, 655381, 983043, 11, 22, 983043, 11, 65558, 983043, 11, 131094, 983043, 11, 196630, 983043, 11, 262166, 983043, 11, 327702, 983043, 11, 393238, 983043, 11, 458774, 983043, 11, 524310, 983043, 11, 589846, 983043, 11, 655382, 983043, 11, 23, 983043, 11, 65559, 983043, 11, 131095, 983043, 11, 196631, 983043, 11, 262167, 983043, 11, 327703, 983043, 11, 393239, 983043, 11, 458775, 983043, 11, 524311, 983043, 11, 589847, 983043, 11, 655383, 983043, 11, 720919, 983043, 11, 24, 983043, 11, 65560, 983043, 11, 131096, 983043, 11, 196632, 983043, 11, 262168, 983043, 11, 327704, 983043, 11, 393240, 983043, 11, 458776, 983043, 11, 524312, 983043, 11, 589848, 983043, 11, 655384, 983043, 11, 720920, 983043, 11, 851992, 983043, 11, 25, 983043, 11, 65561, 983043, 11, 131097, 983043, 11, 196633, 983043, 11, 262169, 983043, 11, 327705, 983043, 11, 393241, 983043, 11, 458777, 983043, 11, 524313, 983043, 11, 589849, 983043, 11, 655385, 983043, 11, 720921, 983043, 11, 851993, 983043, 11, 26, 983043, 11, 65562, 983043, 11, 131098, 983043, 11, 196634, 983043, 11, 262170, 983043, 11, 327706, 983043, 11, 393242, 983043, 11, 458778, 983043, 11, 524314, 983043, 11, 589850, 983043, 11, 655386, 983043, 11, 720922, 983043, 11, 786458, 983043, 11, 851994, 983043, 11, 27, 983043, 11, 65563, 983043, 11, 131099, 983043, 11, 196635, 983043, 11, 262171, 983043, 11, 327707, 983043, 11, 393243, 983043, 11, 458779, 983043, 11, 524315, 983043, 11, 589851, 983043, 11, 655387, 983043, 11, 720923, 983043, 11, 786459, 983043, 11, 851995, 983043, 11, 28, 983043, 11, 65564, 983043, 11, 131100, 983043, 11, 196636, 983043, 11, 262172, 983043, 11, 327708, 983043, 11, 393244, 983043, 11, 458780, 983043, 11, 524316, 983043, 11, 589852, 983043, 11, 655388, 983043, 11, 720924, 983043, 11, 786460, 983043, 11, 851996, 983043, 11, 29, 983043, 11, 65565, 983043, 11, 131101, 983043, 11, 196637, 983043, 11, 262173, 983043, 11, 327709, 983043, 11, 393245, 983043, 11, 458781, 983043, 11, 524317, 983043, 11, 589853, 983043, 11, 655389, 983043, 11, 720925, 983043, 11, 786461, 983043, 11, 851997, 983043, 11, 30, 983043, 11, 65566, 983043, 11, 131102, 983043, 11, 196638, 983043, 11, 262174, 983043, 11, 327710, 983043, 11, 393246, 983043, 11, 458782, 983043, 11, 524318, 983043, 11, 589854, 983043, 11, 655390, 983043, 11, 720926, 983043, 11, 786462, 983043, 11, 851998, 983043, 11, 31, 983043, 11, 65567, 983043, 11, 131103, 983043, 11, 196639, 983043, 11, 262175, 983043, 11, 327711, 983043, 11, 393247, 983043, 11, 458783, 983043, 11, 524319, 983043, 11, 589855, 983043, 11, 655391, 983043, 11, 720927, 983043, 11, 786463, 983043, 11, 851999, 983043, 11, 917504, 983043, 11, 983040, 983043, 11, 1048576, 983043, 11, 1114112, 983043, 11, 1179648, 983043, 11, 1245184, 983043, 11, 917505, 983043, 11, 983041, 983043, 11, 1048577, 983043, 11, 1114113, 983043, 11, 1179649, 983043, 11, 1245185, 983043, 11, 917506, 983043, 11, 983042, 983043, 11, 1048578, 983043, 11, 1114114, 983043, 11, 1179650, 983043, 11, 1245186, 983043, 11, 917507, 983043, 11, 983043, 983043, 11, 1048579, 983043, 11, 1114115, 983043, 11, 1179651, 983043, 11, 1245187, 983043, 11, 917508, 983043, 11, 983044, 983043, 11, 1048580, 983043, 11, 1114116, 983043, 11, 1179652, 983043, 11, 1245188, 983043, 11, 917509, 983043, 11, 983045, 983043, 11, 1048581, 983043, 11, 1114117, 983043, 11, 1179653, 983043, 11, 1245189, 983043, 11, 917510, 983043, 11, 983046, 983043, 11, 1048582, 983043, 11, 1114118, 983043, 11, 1179654, 983043, 11, 1245190, 983043, 11, 917511, 983043, 11, 983047, 983043, 11, 1048583, 983043, 11, 1114119, 983043, 11, 1179655, 983043, 11, 1245191, 983043, 11, 917512, 983043, 11, 983048, 983043, 11, 1048584, 983043, 11, 1114120, 983043, 11, 1179656, 983043, 11, 1245192, 983043, 11, 917513, 983043, 11, 983049, 983043, 11, 1048585, 983043, 11, 1114121, 983043, 11, 1179657, 983043, 11, 1245193, 983043, 11, 917514, 983043, 11, 983050, 983043, 11, 1048586, 983043, 11, 1114122, 983043, 11, 1179658, 983043, 11, 1245194, 983043, 11, 917515, 983043, 11, 983051, 983043, 11, 1048587, 983043, 11, 1114123, 983043, 11, 1179659, 983043, 11, 1245195, 983043, 11, 917516, 983043, 11, 983052, 983043, 11, 1048588, 983043, 11, 1114124, 983043, 11, 1179660, 983043, 11, 1245196, 983043, 11, 917517, 983043, 11, 983053, 983043, 11, 1048589, 983043, 11, 1114125, 983043, 11, 1179661, 983043, 11, 1245197, 983043, 11, 917518, 983043, 11, 983054, 983043, 11, 1048590, 983043, 11, 1114126, 983043, 11, 1179662, 983043, 11, 1245198, 983043, 11, 917519, 983043, 11, 983055, 983043, 11, 1048591, 983043, 11, 1114127, 983043, 11, 1179663, 983043, 11, 1245199, 983043, 11, 917520, 983043, 11, 983056, 983043, 11, 1048592, 983043, 11, 1114128, 983043, 11, 1179664, 983043, 11, 1245200, 983043, 11, 917521, 983043, 11, 983057, 983043, 11, 1048593, 983043, 11, 1114129, 983043, 11, 1179665, 983043, 11, 1245201, 983043, 11, 917522, 983043, 11, 983058, 983043, 11, 1048594, 983043, 11, 1114130, 983043, 11, 1179666, 983043, 11, 1245202, 983043, 11, 917523, 983043, 11, 983059, 983043, 11, 1048595, 983043, 11, 1114131, 983043, 11, 1179667, 983043, 11, 1245203, 983043, 11, 917524, 983043, 11, 983060, 983043, 11, 1048596, 983043, 11, 1114132, 983043, 11, 1179668, 983043, 11, 1245204, 983043, 11, 917525, 983043, 11, 983061, 983043, 11, 1048597, 983043, 11, 1114133, 983043, 11, 1179669, 983043, 11, 1245205, 983043, 11, 917526, 983043, 11, 983062, 983043, 11, 1048598, 983043, 11, 1114134, 983043, 11, 1179670, 983043, 11, 1245206, 983043, 11, 917527, 983043, 11, 983063, 983043, 11, 1048599, 983043, 11, 1114135, 983043, 11, 1179671, 983043, 11, 1245207, 983043, 11, 917528, 983043, 11, 983064, 983043, 11, 1048600, 983043, 11, 1114136, 983043, 11, 1179672, 983043, 11, 1245208, 983043, 11, 917529, 983043, 11, 983065, 983043, 11, 1048601, 983043, 11, 1114137, 983043, 11, 1179673, 983043, 11, 1245209, 983043, 11, 917530, 983043, 11, 983066, 983043, 11, 1048602, 983043, 11, 1114138, 983043, 11, 1179674, 983043, 11, 1245210, 983043, 11, 917531, 983043, 11, 983067, 983043, 11, 1048603, 983043, 11, 1114139, 983043, 11, 1179675, 983043, 11, 1245211, 983043, 11, 917532, 983043, 11, 983068, 983043, 11, 1048604, 983043, 11, 1114140, 983043, 11, 1179676, 983043, 11, 1245212, 983043, 11, 917533, 983043, 11, 983069, 983043, 11, 1048605, 983043, 11, 1114141, 983043, 11, 1179677, 983043, 11, 1245213, 983043, 11, 917534, 983043, 11, 983070, 983043, 11, 1048606, 983043, 11, 1114142, 983043, 11, 1179678, 983043, 11, 1245214, 983043, 11, 917535, 983043, 11, 983071, 983043, 11, 1048607, 983043, 11, 1114143, 983043, 11, 1179679, 983043, 11, 1245215, 983043, 11, 32, 983043, 11, 65568, 983043, 11, 131104, 983043, 11, 196640, 983043, 11, 262176, 983043, 11, 327712, 983043, 11, 393248, 983043, 11, 458784, 983043, 11, 524320, 983043, 11, 589856, 983043, 11, 655392, 983043, 11, 720928, 983043, 11, 786464, 983043, 11, 852000, 983043, 11, 917536, 983043, 11, 983072, 983043, 11, 1048608, 983043, 11, 1114144, 983043, 11, 1179680, 983043, 11, 1245216, 983043, 11, 33, 983043, 11, 65569, 983043, 11, 131105, 983043, 11, 196641, 983043, 11, 262177, 983043, 11, 327713, 983043, 11, 393249, 983043, 11, 458785, 983043, 11, 524321, 983043, 11, 589857, 983043, 11, 655393, 983043, 11, 720929, 983043, 11, 786465, 983043, 11, 852001, 983043, 11, 917537, 983043, 11, 983073, 983043, 11, 1048609, 983043, 11, 1114145, 983043, 11, 1179681, 983043, 11, 1245217, 983043, 11, 34, 983043, 11, 65570, 983043, 11, 131106, 983043, 11, 196642, 983043, 11, 262178, 983043, 11, 327714, 983043, 11, 393250, 983043, 11, 458786, 983043, 11, 524322, 983043, 11, 589858, 983043, 11, 655394, 983043, 11, 720930, 983043, 11, 786466, 983043, 11, 852002, 983043, 11, 917538, 983043, 11, 983074, 983043, 11, 1048610, 983043, 11, 1114146, 983043, 11, 1179682, 983043, 11, 1245218, 983043, 11, 35, 983043, 11, 65571, 983043, 11, 131107, 983043, 11, 196643, 983043, 11, 262179, 983043, 11, 327715, 983043, 11, 393251, 983043, 11, 458787, 983043, 11, 524323, 983043, 11, 589859, 983043, 11, 655395, 983043, 11, 720931, 983043, 11, 786467, 983043, 11, 852003, 983043, 11, 917539, 983043, 11, 983075, 983043, 11, 1048611, 983043, 11, 1114147, 983043, 11, 1179683, 983043, 11, 1245219, 983043, 11, 1310720, 983043, 11, 1310721, 983043, 11, 1310722, 983043, 11, 1310723, 983043, 11, 1310724, 983043, 11, 1310725, 983043, 11, 1310726, 983043, 11, 1310727, 983043, 11, 1310728, 983043, 11, 1310729, 983043, 11, 1310730, 983043, 11, 1310731, 983043, 11, 1310732, 983043, 11, 1310733, 983043, 11, 1310734, 983043, 11, 1310735, 983043, 11, 1310736, 983043, 11, 1310737, 983043, 11, 1310738, 983043, 11, 1310739, 983043, 11, 1310740, 983043, 11, 1310741, 983043, 11, 1310742, 983043, 11, 1310743, 983043, 11, 1310744, 983043, 11, 1310745, 983043, 11, 1310746, 983043, 11, 1310747, 983043, 11, 1310748, 983043, 11, 1310749, 983043, 11, 1310750, 983043, 11, 1310751, 983043, 11, 1310752, 983043, 11, 1310753, 983043, 11, 1310754, 983043, 11, 1310755, 983043, 11, 36, 983043, 11, 65572, 983043, 11, 131108, 983043, 11, 196644, 983043, 11, 262180, 983043, 11, 327716, 983043, 11, 393252, 983043, 11, 458788, 983043, 11, 524324, 983043, 11, 589860, 983043, 11, 655396, 983043, 11, 720932, 983043, 11, 786468, 983043, 11, 852004, 983043, 11, 917540, 983043, 11, 983076, 983043, 11, 1048612, 983043, 11, 1114148, 983043, 11, 1179684, 983043, 11, 1245220, 983043, 11, 1310756, 983043, 11, 786446, 983043, 11, 786447, 983043, 11, 786448, 983043, 11, 786449, 983043, 11, 786450, 983043, 11, 720914, 983043, 11, 720915, 983043, 11, 720916, 983043, 11, 720917, 983043, 11, 720918, 983043, 11, 786454, 983043, 11, 786453, 983043, 11, 786452, 983043, 11, 786451, 983043, 11, 786455, 983043, 11, 786456, 983043, 11, 786457, 983043, 11, 851991, 983043, 11, 851990, 983043, 11, 851989, 983043, 11)
layer_1/tile_data = PackedInt32Array(0, 3, 2, 1, 65539, 2, 2, 3, 2, 3, 65539, 2, 4, 3, 2, 5, 65539, 2, 6, 3, 2, 7, 65539, 2, 8, 3, 2, 9, 65539, 2, 10, 3, 2, 11, 65539, 2, 12, 3, 2, 13, 65539, 2, 14, 3, 2, 15, 65539, 2, 16, 3, 2, 17, 65539, 2, 18, 3, 2, 19, 65539, 2, 20, 3, 2, 21, 65539, 2, 22, 3, 2, 23, 65539, 2, 24, 3, 2, 25, 65539, 2, 26, 3, 2, 27, 65539, 2, 28, 3, 2, 29, 65539, 2, 30, 3, 2, 31, 65539, 2, 32, 3, 2, 33, 65539, 2, 34, 3, 2, 35, 65539, 2, 65570, 3, 2, 65571, 65539, 2, 65568, 3, 2, 65569, 65539, 2, 65566, 3, 2, 65567, 65539, 2, 65564, 3, 2, 65565, 65539, 2, 65562, 3, 2, 65563, 65539, 2, 65560, 3, 2, 65561, 65539, 2, 65558, 3, 2, 65559, 65539, 2, 65556, 3, 2, 65557, 65539, 2, 65554, 3, 2, 65555, 65539, 2, 65552, 3, 2, 65553, 65539, 2, 65550, 3, 2, 65551, 65539, 2, 65548, 3, 2, 65549, 65539, 2, 65546, 3, 2, 65547, 65539, 2, 65544, 3, 2, 65545, 65539, 2, 65542, 3, 2, 65543, 65539, 2, 65540, 3, 2, 65541, 65539, 2, 65538, 3, 2, 65539, 65539, 2, 65536, 3, 2, 65537, 65539, 2, 131072, 3, 2, 196608, 3, 3, 131073, 65539, 2, 196609, 65539, 3, 131074, 3, 2, 196610, 3, 3, 131075, 65539, 2, 196611, 65539, 3, 131076, 3, 2, 196612, 3, 3, 131077, 65539, 2, 196613, 65539, 3, 131078, 3, 2, 196614, 3, 3, 131079, 65539, 2, 196615, 65539, 3, 131080, 3, 2, 196616, 3, 3, 131081, 65539, 2, 196617, 65539, 3, 131082, 3, 2, 196618, 3, 3, 131083, 65539, 2, 196619, 65539, 3, 131084, 3, 2, 196620, 3, 3, 131085, 65539, 2, 196621, 65539, 3, 131086, 3, 2, 196622, 3, 3, 131087, 65539, 2, 196623, 65539, 3, 131088, 3, 2, 196624, 3, 3, 131089, 65539, 2, 196625, 65539, 3, 131090, 3, 2, 196626, 3, 3, 131091, 65539, 2, 196627, 65539, 3, 131092, 3, 2, 196628, 3, 3, 131093, 65539, 2, 196629, 65539, 3, 131094, 3, 2, 196630, 3, 3, 131095, 65539, 2, 196631, 65539, 3, 131096, 3, 2, 196632, 3, 3, 131097, 65539, 2, 196633, 65539, 3, 131098, 3, 2, 196634, 3, 3, 131099, 65539, 2, 196635, 65539, 3, 131100, 3, 2, 196636, 3, 3, 131101, 65539, 2, 196637, 65539, 3, 131102, 3, 2, 196638, 3, 3, 131103, 65539, 2, 196639, 65539, 3, 131104, 3, 2, 196640, 3, 3, 131105, 65539, 2, 196641, 65539, 3, 131106, 3, 2, 196642, 3, 3, 131107, 65539, 2, 196643, 65539, 3, 131108, 3, 2, 196644, 3, 3, 36, 3, 2, 65572, 3, 2)
layer_2/tile_data = PackedInt32Array(524290, 524291, 11, 524291, 589827, 11, 786434, 524291, 11, 786435, 589827, 11, 1048578, 524291, 11, 1048579, 589827, 11, 1114114, 458755, 9, 1179650, 458755, 10, 1114115, 458755, 9, 1179651, 458755, 10, 851970, 458755, 9, 917506, 458755, 10, 851971, 458755, 9, 917507, 458755, 10, 589826, 458755, 9, 655362, 458755, 10, 589827, 458755, 9, 655363, 458755, 10, 524294, 524291, 11, 589830, 458755, 9, 655366, 458755, 10, 786438, 524291, 11, 851974, 458755, 9, 917510, 458755, 10, 1048582, 524291, 11, 1114118, 458755, 9, 1179654, 458755, 10, 524295, 589827, 11, 589831, 458755, 9, 655367, 458755, 10, 786439, 589827, 11, 851975, 458755, 9, 917511, 458755, 10, 1048583, 589827, 11, 1114119, 458755, 9, 1179655, 458755, 10, 524298, 524291, 11, 589834, 458755, 9, 655370, 458755, 10, 786442, 524291, 11, 851978, 458755, 9, 917514, 458755, 10, 1048586, 524291, 11, 1114122, 458755, 9, 1179658, 458755, 10, 524299, 589827, 11, 589835, 458755, 9, 655371, 458755, 10, 786443, 589827, 11, 851979, 458755, 9, 917515, 458755, 10, 1048587, 589827, 11, 1114123, 458755, 9, 1179659, 458755, 10, 524316, 524291, 11, 589852, 458755, 9, 655388, 458755, 10, 786460, 524291, 11, 851996, 458755, 9, 917532, 458755, 10, 1048604, 524291, 11, 1114140, 458755, 9, 1179676, 458755, 10, 524317, 589827, 11, 589853, 458755, 9, 655389, 458755, 10, 786461, 589827, 11, 851997, 458755, 9, 917533, 458755, 10, 1048605, 589827, 11, 1114141, 458755, 9, 1179677, 458755, 10, 524320, 524291, 11, 589856, 458755, 9, 655392, 458755, 10, 786464, 524291, 11, 852000, 458755, 9, 917536, 458755, 10, 1048608, 524291, 11, 1114144, 458755, 9, 1179680, 458755, 10, 524321, 589827, 11, 589857, 458755, 9, 655393, 458755, 10, 786465, 589827, 11, 852001, 458755, 9, 917537, 458755, 10, 1048609, 589827, 11, 1114145, 458755, 9, 1179681, 458755, 10, 524312, 524291, 11, 589848, 458755, 9, 655384, 458755, 10, 786456, 524291, 11, 851992, 458755, 9, 917528, 458755, 10, 1048600, 524291, 11, 1114136, 458755, 9, 1179672, 458755, 10, 524313, 589827, 11, 589849, 458755, 9, 655385, 458755, 10, 786457, 589827, 11, 851993, 458755, 9, 917529, 458755, 10, 1048601, 589827, 11, 1114137, 458755, 9, 1179673, 458755, 10, 65538, 196611, 9, 131074, 196611, 10, 196610, 196611, 11, 65539, 196611, 9, 131075, 196611, 10, 196611, 196611, 11, 65548, 196611, 9, 131084, 196611, 10, 196620, 196611, 11, 65547, 196611, 9, 131083, 196611, 10, 196619, 196611, 11, 65563, 196611, 9, 131099, 196611, 10, 196635, 196611, 11, 65564, 196611, 9, 131100, 196611, 10, 196636, 196611, 11, 131102, 131075, 10, 196638, 131075, 11, 131103, 131075, 10, 196639, 131075, 11, 131106, 131075, 10, 196642, 131075, 11, 131085, 3, 10, 196621, 3, 11, 131095, 3, 10, 196631, 3, 11, 131096, 3, 10, 196632, 3, 11)
layer_3/tile_data = PackedInt32Array(131079, 1114115, 7, 196615, 1114115, 8, 131080, 1179651, 7, 196616, 1179651, 8)

[node name="Road" parent="." instance=ExtResource("2_m3yyx")]
position = Vector2(576, 275)
rotation = -1.5708

[node name="Player" parent="." instance=ExtResource("3_yfe43")]
position = Vector2(576, 577)

[node name="DrumTeacher" parent="." instance=ExtResource("4_yoc1y")]
position = Vector2(582, 54)

[node name="DrumUI" parent="." instance=ExtResource("5_hte52")]

[node name="SaveSystem" parent="." instance=ExtResource("6_vdq7k")]

[node name="SessionEnd" parent="." instance=ExtResource("7_u3yds")]
process_mode = 3
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OptionContainer" parent="CanvasLayer" instance=ExtResource("8_a7ns0")]
visible = false

[node name="DrumTutorial" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="DrumTutorial"]
modulate = Color(1, 1, 1, 0.65098)
position = Vector2(577, 500)
scale = Vector2(3, 3)
texture = ExtResource("9_ujuxm")
